Updarted info windows styles

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -146,10 +146,10 @@ Control Room Log Map
                         }
                     }
                     
-                    var content = '<div><h3>'+log['log_blurb']+'</h3>'+
-                        '<p>'+log['log_entry_open_time']+'</p>'+
-                        '<p>Location: '+log['location']+'</p>'+
-                        '<p>Reported By: '+log['reported_by']+'</p>'+
+                    var content = '<div><h4>'+log['log_blurb']+'</h4>'+
+                        '<p>'+log['log_entry_open_time']+'<br>'+
+                        'Location: '+log['location']+'<br>'+
+                        'Reported By: '+log['reported_by']+'</p>'+
                         medical+security+general+lost+
                         '</div>';
                     
