--- a/app/Resources/views/venue_camera.html.twig
+++ b/app/Resources/views/venue_camera.html.twig
@@ -21,7 +21,10 @@
                                 <div class="col-md-6">
                                     {% for camera in form.camera_id %}
                                         {{ form_widget(camera) }} {{ form_label(camera) }}<br>
-                                        {{ form_widget(camera.inverse) }} {{ form_label(camera.inverse) }}<br>
+
+                                    {% endfor %}
+                                    {% for inverse in form.inverse %}
+                                       {{ form_widget(inverse) }} {{ form_label(inverse) }}<br>
                                     {% endfor %}
                                 </div>
                             </div>
