--- a/app/Resources/views/venue_camera.html.twig
+++ b/app/Resources/views/venue_camera.html.twig
@@ -14,18 +14,15 @@
 
                         <div class="row">
                             <div class="form-group">
-                                <div class="col-md-2">
+                                 <div class="col-md-6">
                                     {{ form_label(form.camera_id) }}
                                     {{ form_errors(form.camera_id) }}
+                                    {{ form_widget(form.camera_id) }}
                                 </div>
                                 <div class="col-md-6">
-                                    {% for camera in form.camera_id %}
-                                        {{ form_widget(camera) }} {{ form_label(camera) }}<br>
-
-                                    {% endfor %}
-                                    {% for inverse in form.inverse %}
-                                       {{ form_widget(inverse) }} {{ form_label(inverse) }}<br>
-                                    {% endfor %}
+                                    {{ form_label(form.inverse) }}
+                                    {{ form_errors(form.inverse) }}
+                                    {{ form_widget(form.inverse) }}
                                 </div>
                             </div>
                         </div><br>
