Adding venue camera form

--- a/app/Resources/views/venue_camera.html.twig
+++ b/app/Resources/views/venue_camera.html.twig
@@ -26,6 +26,12 @@
                                 </div>
                             </div>
                         </div><br>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <button class="btn btn-success btn-block" type="submit">Add camera to venue</button>
+                            </div>
+                            {{ form_end(form) }}
+                        </div>
 
 
 
