Adding venue camera form

--- a/app/Resources/views/venue_camera.html.twig
+++ b/app/Resources/views/venue_camera.html.twig
@@ -28,7 +28,7 @@
                                         <td>{{ camera.count_out }}</td>
                                     </tr>
                                 {% endfor %}
-                                {% if venue_detailed_count.skew if empty %}
+                                {% if venue_detailed_count.skew is empty %}
                                 {% else %}
                                     <tr>
                                         <td></td>
