--- a/app/Resources/views/venue_camera.html.twig
+++ b/app/Resources/views/venue_camera.html.twig
@@ -22,7 +22,7 @@
                                 </tr>
                                 {% for camera in venue_detailed_count.cameras %}
                                     <tr>
-                                        <td>{{ camera.id }}</td>
+                                        <td>{{ camera.camera_id }}</td>
                                         <td>{{ camera.name }}</td>
                                         <td>{{ camera.count_in }}</td>
                                         <td>{{ camera.count_out }}</td>
