Adding venue camera form

--- a/app/Resources/views/venue_camera.html.twig
+++ b/app/Resources/views/venue_camera.html.twig
@@ -42,7 +42,7 @@
                                         <td></td>
                                         <td><strong>Total:</strong></td>
                                         <td></td>
-                                        <td><strong>{ venue_detailed_count.totals.count_in }}</strong></td>
+                                        <td><strong>{{  venue_detailed_count.totals.count_in }}</strong></td>
                                         <td><strong>{{ venue_detailed_count.totals.count_out }}</strong></td>
                                         <td><strong>{{ venue_detailed_count.totals.count_in-venue_detailed_count.totals.count_out }}</strong></td>
                                     </tr>
@@ -53,7 +53,7 @@
                                     <td></td>
                                     <td>{{ venue_detailed_count.skew.count_in }}</td>
                                         <td>{{ venue_detailed_count.skew.count_out }}</td>
-                                        <td>{{ <td>{{ venue_detailed_count.skew.count_in-venue_detailed_count.skew.count_out }}</td>
+                                        <td>{{ venue_detailed_count.skew.count_in-venue_detailed_count.skew.count_out }}</td>
                                         </tr>
                                 </tbody>
                             </table>
