Adding venue camera form

--- a/app/Resources/views/venue_camera.html.twig
+++ b/app/Resources/views/venue_camera.html.twig
@@ -51,9 +51,9 @@
                                     <td></td>
                                     <td>Venue Skew</td>
                                     <td></td>
-                                    <td>{{ venue_detailed_count.skew.count_in }}</td>
-                                        <td>{{ venue_detailed_count.skew.count_out }}</td>
-                                        <td>{{ venue_detailed_count.skew.count_in-venue_detailed_count.skew.count_out }}</td>
+                                    <td>{{ venue_detailed_count.skew.running_count_in }}</td>
+                                        <td>{{ venue_detailed_count.skew.running_count_out }}</td>
+                                        <td>{{ venue_detailed_count.skew.running_count_in-venue_detailed_count.skew.running_count_out }}</td>
                                         </tr>
                                 </tbody>
                             </table>
