--- a/app/Resources/views/venue_camera.html.twig
+++ b/app/Resources/views/venue_camera.html.twig
@@ -40,21 +40,21 @@
                                 {% else %}
                                     <tr>
                                         <td></td>
-                                        <td><strong>Total:</strong></td>
+                                        <td>Venue Skew</td>
                                         <td></td>
-                                        <td><strong>{{  venue_detailed_count.totals.count_in }}</strong></td>
-                                        <td><strong>{{ venue_detailed_count.totals.count_out }}</strong></td>
-                                        <td><strong>{{ venue_detailed_count.totals.count_in-venue_detailed_count.totals.count_out }}</strong></td>
+                                        <td>{{ venue_detailed_count.skew.count_in }}</td>
+                                        <td>{{ venue_detailed_count.skew.count_out }}</td>
+                                        <td>{{ venue_detailed_count.skew.count_in-venue_detailed_count.skew.count_out }}</td>
                                     </tr>
                                 {% endif %}
-                                <tr>
-                                    <td></td>
-                                    <td>Venue Skew</td>
-                                    <td></td>
-                                    <td>{{ venue_detailed_count.skew.running_count_in }}</td>
-                                        <td>{{ venue_detailed_count.skew.running_count_out }}</td>
-                                        <td>{{ venue_detailed_count.skew.running_count_in-venue_detailed_count.skew.running_count_out }}</td>
-                                        </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td><strong>Total:</strong></td>
+                                        <td></td>
+                                        <td><strong>{{  venue_detailed_count.totals.running_count_in }}</strong></td>
+                                        <td><strong>{{ venue_detailed_count.totals.running_count_out }}</strong></td>
+                                        <td><strong>{{ venue_detailed_count.totals.running_count_in-venue_detailed_count.totals.running_count_out }}</strong></td>
+                                    </tr>
                                 </tbody>
                             </table>
                         {% endif %}
