Updating people counting page and combining skew and venue detalied

--- a/app/Resources/views/venue_detailed.html.twig
+++ b/app/Resources/views/venue_detailed.html.twig
@@ -106,6 +106,7 @@
 
                 {# start of skew rows#}
                 <div class="row">
+                    <h4>Venue skew's</h4>
                     <div class="col-md-6">
                         {% if skews is empty %}
                             No skews
