--- a/app/Resources/views/venue_detailed.html.twig
+++ b/app/Resources/views/venue_detailed.html.twig
@@ -34,7 +34,14 @@
                                     <td><strong>Remove Camera</strong></td>
                                 </tr>
                                 {% for camera in venue_detailed_count.cameras %}
-                                    <tr>
+                                    <tr
+                                            {% if  camera.status %}
+                                                class=""
+                                            {% else %}
+                                                class="flash"
+                                            {% endif %}
+
+                                    >
                                         <td>{{ camera.camera_id }}</td>
                                         <td>{{ camera.name }}</td>
                                         {% if  camera.inverse %}
@@ -106,6 +113,7 @@
 
                 {# start of skew rows#}
                 <div class="row">
+                    <br>
                     <h4>Venue skew's</h4>
                     <div class="col-md-6">
                         {% if skews is empty %}
