Removing refrance to old venue camera and venue skew views

--- a/app/Resources/views/venue_detailed.html.twig
+++ b/app/Resources/views/venue_detailed.html.twig
@@ -35,7 +35,7 @@
                                 </tr>
                                 {% for camera in venue_detailed_count.cameras %}
                                     <tr
-                                            {% if  camera.status %}
+                                            {% if  camera.status == true %}
                                                 class=""
                                             {% else %}
                                                 class="flash"
