flash is camera out of date

--- a/app/Resources/views/venue_detailed.html.twig
+++ b/app/Resources/views/venue_detailed.html.twig
@@ -35,8 +35,7 @@
                                 </tr>
                                 {% for camera in venue_detailed_count.cameras %}
                                     <tr
-                                            {{ camera.status }}
-                                            {% if camera.status == false %}
+                                            {% if not camera.status %}
                                                class="flash"
                                             {% endif %}
 
