--- a/app/Resources/views/venue_detailed.html.twig
+++ b/app/Resources/views/venue_detailed.html.twig
@@ -35,10 +35,10 @@
                                 </tr>
                                 {% for camera in venue_detailed_count.cameras %}
 
-                                    {% if not camera.status %}
-                                       <tr class="flash">
+                                    {% if camera.status %}
+                                        <tr class="flash true">
                                         {% else %}
-                                        <tr>
+                                            <tr class="flash flase">
                                     {% endif %}
 
 
