--- a/app/Resources/views/venue_detailed.html.twig
+++ b/app/Resources/views/venue_detailed.html.twig
@@ -35,24 +35,24 @@
                                 </tr>
                                 {% for camera in venue_detailed_count.cameras %}
 
-                                    {% if camera.status %}
-                                        <tr class="flash true">
-                                        {% else %}
-                                            <tr class="flash flase">
+                                    {% if camera.status == "true" %}
+                                        <tr class="">
+                                    {% else %}
+                                        <tr class="flash flase">
                                     {% endif %}
 
 
-                                        <td>{{ camera.camera_id }}</td>
-                                        <td>{{ camera.name }}</td>
-                                        {% if  camera.inverse %}
-                                            <td>TRUE</td>
-                                        {% else %}
-                                            <td>FALSE</td>
-                                        {% endif %}
-                                        <td>{{ camera.count_in }}</td>
-                                        <td>{{ camera.count_out }}</td>
-                                        <td>{{ camera.count_in-camera.count_out }}</td>
-                                        <td><a href="{{ path('venue_camera_delete', {'id': camera.id}) }}"><span class="glyphicon glyphicon-remove" onclick="return confirm('Are you sure you want to remove the camera?')" aria-hidden="true" aria-label="Remove camera"></span></a></td>
+                                    <td>{{ camera.camera_id }}</td>
+                                    <td>{{ camera.name }}</td>
+                                    {% if  camera.inverse %}
+                                        <td>TRUE</td>
+                                    {% else %}
+                                        <td>FALSE</td>
+                                    {% endif %}
+                                    <td>{{ camera.count_in }}</td>
+                                    <td>{{ camera.count_out }}</td>
+                                    <td>{{ camera.count_in-camera.count_out }}</td>
+                                    <td><a href="{{ path('venue_camera_delete', {'id': camera.id}) }}"><span class="glyphicon glyphicon-remove" onclick="return confirm('Are you sure you want to remove the camera?')" aria-hidden="true" aria-label="Remove camera"></span></a></td>
 
                                     </tr>
                                 {% endfor %}
