--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -146,8 +146,8 @@ Control Room Log Map
                         }
                     }
                     
-                    var url = "{{ path('edit_entry', {'id': log['id']}) }}";
-                    var content = '<div><a href="'+url+'">'+
+                    var url = "{{ path('edit_entry') }}";
+                    var content = '<div><a href="'+url+log['id']+'">'+
                         '<h4>'+log['log_blurb']+'</h4></a>'+
                         '<p>'+log['log_entry_open_time']+'<br>'+
                         'Location: '+log['location']+'<br>'+
