Modified datetime on infowindow

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -147,11 +147,11 @@ Control Room Log Map
                     }
                     
                     var url = "{{ path('edit_entry') }}";
-                    var log_date = log['log_entry_open_time'];
+                    var log_date = new Date(log['log_entry_open_time']);
                     
                     var content = '<div><a href="'+url+'/'+log['id']+'">'+
                         '<h4>'+log['log_blurb']+'</h4></a>'+
-                        '<p>'+log_date.toString()+'<br>'+
+                        '<p>'+log_date.toLocaleString()+'<br>'+
                         'Location: '+log['location']+'<br>'+
                         'Reported By: '+log['reported_by']+'</p>'+
                         medical+security+general+lost+
