Modified date handlign on infowindow

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -147,11 +147,11 @@ Control Room Log Map
                     }
                     
                     var url = "{{ path('edit_entry') }}";
-                    var log_date = new Date(log['log_entry_open_time']);
-                    
+                    var utc_log_date = moment.tz(log['log_entry_open_time']['date'], log['log_entry_open_time']['timezone']);
+                    var log_date = moment(utc_log_date).local();
                     var content = '<div><a href="'+url+'/'+log['id']+'">'+
                         '<h4>'+log['log_blurb']+'</h4></a>'+
-                        '<p>'+log_date.toLocaleString()+'<br>'+
+                        '<p>'+log_date.format("YYYY-MM-DD HH:mm:ss");+'<br>'+
                         'Location: '+log['location']+'<br>'+
                         'Reported By: '+log['reported_by']+'</p>'+
                         medical+security+general+lost+
