Modified globals on UPS

--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -147,7 +147,7 @@ Control Room Log
                 success:function(data)
                 {
                     var newTable = data;
-                    //var oldTable = $("#logTable").html();
+                    var oldTable = $("#logTable").html();
                     if (oldTable != newTable)
                     {
                         $("#logTable").html(data);
