--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -155,7 +155,7 @@ Control Room Log
                     }
                 }
             });
-            setTimeout(tablePoll,5000);
+            setTimeout(dataPoll,5000);
         }
     </script>
 {% endblock %}
